fix overflow issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1762,6 +1762,7 @@ html {
 
 body {
   height: 100%;
+  overflow-x: clip;
 }
 
 html:has(#overlayForm:not(.hidden)) {
