--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,7 @@ img {
 
 body {
   height: 100%;
+  overflow-x: clip;
 }
 
 html:has(#overlayForm:not(.hidden)) {
